crates/djls-project/tests/snapshots/corpus__repos__django-oscar__src__oscar__templatetags__category_tags.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "tag::category_tree":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "oscar.templatetags.category_tags::tag::category_tree":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: depth
            requirement: optional
            kind: Variable
          - name: parent
            requirement: optional
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
filter_arities: {}
block_specs: {}
