crates/djls-project/tests/snapshots/corpus__repos__django-oscar__src__oscar__templatetags__dashboard_tags.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "tag::dashboard_navigation":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "oscar.templatetags.dashboard_tags::tag::dashboard_navigation":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: user
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
filter_arities: {}
block_specs: {}
