crates/djls-project/tests/snapshots/corpus__repos__django-oscar__src__oscar__templatetags__display_tags.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "tag::get_parameters":
    kind: tag
    has_doc: false
  "tag::iffeature":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "oscar.templatetags.display_tags::tag::get_parameters":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: except_field
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "oscar.templatetags.display_tags::tag::iffeature":
    arg_constraints:
      - Exact: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Exact: 2
        message:
          PercentFormat:
            template: "%r tag requires a single argument"
            args:
              - SplitElement:
                  Forward: 0
    argument_syntax:
      Parameters:
        - name: app_name
          requirement: required
          kind: Variable
    as_var: keep
filter_arities: {}
block_specs:
  "oscar.templatetags.display_tags::tag::iffeature":
    body_analysis_evidence: not_detected
    end_tag: endiffeature
    intermediates: []
