crates/djls-project/tests/snapshots/corpus__repos__django-oscar__src__oscar__templatetags__form_tags.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
definitions:
  "tag::annotate_form_field":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities: {}
block_specs: {}
