crates/djls-project/tests/snapshots/corpus__repos__django-oscar__src__oscar__templatetags__image_tags.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "tag::image":
    kind: tag
    has_doc: false
  "tag::oscar_thumbnail":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "oscar.templatetags.image_tags::tag::image":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Min: 2
        message:
          PercentFormat:
            template: "%r tag requires at least an image URL or field"
            args:
              - SplitElement:
                  Forward: 0
    argument_syntax:
      Parameters:
        - name: image
          requirement: required
          kind: Variable
    as_var: keep
filter_arities: {}
block_specs: {}
