crates/djls-project/tests/snapshots/corpus__repos__django-oscar__src__oscar__templatetags__purchase_info_tags.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "tag::purchase_info_for_line":
    kind: tag
    has_doc: false
  "tag::purchase_info_for_product":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "oscar.templatetags.purchase_info_tags::tag::purchase_info_for_line":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: request
            requirement: required
            kind: Variable
          - name: line
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "oscar.templatetags.purchase_info_tags::tag::purchase_info_for_product":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: request
            requirement: required
            kind: Variable
          - name: product
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
filter_arities: {}
block_specs: {}
