crates/djls-project/tests/snapshots/corpus__repos__django-oscar__src__oscar__templatetags__reviews_tags.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: sorted_snapshot(&bundle)?
---
definitions:
  "filter::as_stars":
    kind: filter
    has_doc: false
  "filter::is_review_permitted":
    kind: filter
    has_doc: false
  "filter::may_vote":
    kind: filter
    has_doc: false
symbols_are_unobserved: false
tag_rules: {}
filter_arities:
  "oscar.templatetags.reviews_tags::filter::as_stars": no_argument
  "oscar.templatetags.reviews_tags::filter::is_review_permitted": required_argument
  "oscar.templatetags.reviews_tags::filter::may_vote": required_argument
block_specs: {}
